# OmniPerception

./: readme.md
auto_aim_interfaces/: CMakeLists.txt
auto_aim_interfaces/msg/: Omni.msg
omni_perception_bringup/: CMakeLists.txt  package.xml
omni_perception_bringup/config/: camera_params.yaml  omni_perception_params.yaml
omni_perception_bringup/launch/: omni_perception.launch.py  omni_perception_with_camera.launch.py  rm_omni_perception.launch.py
rm_omni_perception/: CMakeLists.txt  package.xml
rm_omni_perception/include/rm_omni_perception/: armor.hpp  number_classifier.hpp  omni_perception.hpp  omni_perception_node.hpp
rm_omni_perception/src/: number_classifier.cpp  omni_perception.cpp  omni_perception_node.cpp
usb_camera/: CMakeLists.txt  package.xml  readme.md
usb_camera/config/: camera_info1.yaml  camera_params.yaml
usb_camera/include/usb_camera/: usb_camera_node.hpp
usb_camera/launch/: multi_camera.launch.py  oneself_camera.launch.py  three_cameras.launch.py
usb_camera/src/: usb_camera_node.cpp
