<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omni_perception_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bh2218681402@outlook.com">Boombroke</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rm_omni_perception</depend>
  <depend>usb_camera</depend>
  <depend>rclcpp_components</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
